update default tag from day to hour

--- a/web-static/graphs.html
+++ b/web-static/graphs.html
@@ -528,6 +528,7 @@
                     change_period(period, currency_info);
                 });
             }
+//			change_period('hour','scale1');
         </script>
     </body>
 </html>
