--- a/web-static/graphs.html
+++ b/web-static/graphs.html
@@ -60,7 +60,7 @@
 				<ul class="nav">
 				  <li><a href="index.html">Stats</a></li>
 				  <li class="active"><a href="graphs.html">Graph</a></li>
-				  <li><a href="https://github.com/hardcpp/P2PoolExtendedFrontEnd">Contact</a></li>
+				  <li><a href="https://www.genyuanlian.com/">Contact</a></li>
 				</ul>
 			  </div><!--/.nav-collapse -->
 			</div>
