--- a/web-static/index.html
+++ b/web-static/index.html
@@ -137,7 +137,7 @@
 						d3.select('#pool_rate').text(d3.format('.3s')(global_stats.pool_hash_rate) + 'H/s');
 						d3.select('#pool_stale').text(d3.format('.2p')(global_stats.pool_stale_prop));
 						d3.select('#difficulty').text(d3.format('.3r')(global_stats.min_difficulty));
-
+						d3.select('#network_difficulty').text(d3.format('.3r')(global_stats.network_block_difficulty));
 						var time_to_block = local_stats.attempts_to_block/global_stats.pool_hash_rate;
 						d3.select('#time_to_block').text(d3.format('.3r')(time_to_block/3600) + " hours");
 						
@@ -241,7 +241,7 @@
             <ul class="nav">
 			  <li class="active"><a href="index.html">Stats</a></li>
 			  <li><a href="graphs.html">Graph</a></li>
-              <li><a href="https://github.com/hardcpp/P2PoolExtendedFrontEnd">Contact</a></li>
+              <li><a href="https://www.genyuanlian.com/">Contact</a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
@@ -287,8 +287,10 @@
 							  <td><h5>Shares</h5></td>
 							  <td><span id="shares_total" class="label"></span> total (<span id="shares_orphan" class="label label-warning"></span> orphaned, <span id="shares_dead" class="label label-warning"></span> dead) Efficiency: <span class="label label-info" id="efficiency"></span></td>
 							  <td></td>
-							  <td><h5>Payout if a block were found NOW</h5></td>
-							  <td><span id="payout_amount" class="label"></span> <span class="symbol"></span></td>
+                              <td><h5>Difficulty</h5></td>
+							  <td><span id="network_difficulty" class="label"></span> </td>
+							  <!--<td><h5>Payout if a block were found NOW</h5></td>-->
+							  <!--<td><span id="payout_amount" class="label"></span> <span class="symbol"></span></td>-->
 							</tr>
 							<tr>
 							<tr>
